--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
-spring.datasource.url=jdbc:h2:file:./data/deliverydb;MODE=MySQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/produtos_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=produtos_user
+spring.datasource.password=produtos2024
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+logging.level.org.springframework=INFO
+logging.level.com.example.produtos=DEBUG
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+server.port=8080
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# Configurações do OAuth2 Resource Server (exemplo)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/myrealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/auth/realms/myrealm/protocol/openid-connect/certs
+
+# Configurações adicionais
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
