feat: Implementa CRUD de produtos e configuração inicial do projeto
- Adiciona ProdutoController com 5 endpoints REST
- Configura Swagger UI para documentação da API
- Implementa testes unitários iniciais
- Configura conexão com banco de dados H2(bd em memoria)
- Adiciona arquivo .gitignore para controle de versão

--- a/pom.xml
+++ b/pom.xml
@@ -90,13 +90,22 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
+         <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency> 
         <!-- Adicionado para testes com banco de dados em memória -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
-        </dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
+ <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <optional>true</optional>
+    </dependency>
         
         <!-- Adicionado para suporte a cache -->
         <dependency>
